my-test/testsuite_scan/ir/SingleSource/Benchmarks/Misc/perlin.ll.err
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Benchmarks/Misc/perlin.c:58:8: error: type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int [-Wimplicit-int]
   58 | static init() { 
      | ~~~~~~ ^
      | int
1 error generated.
